--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="sidebar-small">
         <div class="btn-group-vertical sidebar-nav-small" id="menu-toggle-small">
-            <a href="#" id="menu-toggle" class="btn btn-dark btn-lg text-left"><i class="fa fa-bars fa-2x fa-fw"></i>&nbsp; Site One</a>
+            <a href="#" id="menu-toggle" class="btn btn-dark btn-lg text-left"><i class="fa fa-bars fa-2x fa-fw"></i>&nbsp; Menu</a>
             <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-home fa-2x fa-fw"></i>&nbsp; Home</a>
             <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-info fa-2x fa-fw"></i>&nbsp; About</a>
             <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-cogs fa-2x fa-fw"></i>&nbsp; Services</a>
@@ -29,6 +29,8 @@
     <!-- JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     
