--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="sidebar-small">
-        <div class="btn-group-vertical sidebar-nav-small" id="menu-toggle-small">
-            <a href="#" id="menu-toggle" class="btn btn-dark btn-lg text-left"><i class="fa fa-bars fa-2x fa-fw"></i>&nbsp; Menu</a>
-            <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-home fa-2x fa-fw"></i>&nbsp; Home</a>
-            <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-info fa-2x fa-fw"></i>&nbsp; About</a>
-            <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-cogs fa-2x fa-fw"></i>&nbsp; Services</a>
-            <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-briefcase fa-2x fa-fw"></i>&nbsp; Portfolio</a>
-            <a href="#" class="btn btn-dark btn-lg text-left toggle menu-child"><i class="fa fa-phone fa-2x fa-fw"></i>&nbsp; Contacts</a>
+    <div id="sidebar-menu">
+        <div class="btn-group-vertical" id="menu-container">
+            <a href="#" id="menu-container-toggle" class="btn btn-dark btn-lg text-left"><i class="fa fa-bars fa-2x fa-fw"></i>&nbsp; Menu</a>
+            <a href="#" class="btn btn-dark btn-lg text-left hover-efect menu-child"><i class="fa fa-home fa-2x fa-fw"></i>&nbsp; Home</a>
+            <a href="#" class="btn btn-dark btn-lg text-left hover-efect menu-child"><i class="fa fa-info fa-2x fa-fw"></i>&nbsp; About</a>
+            <a href="#" class="btn btn-dark btn-lg text-left hover-efect menu-child"><i class="fa fa-cogs fa-2x fa-fw"></i>&nbsp; Services</a>
+            <a href="#" class="btn btn-dark btn-lg text-left hover-efect menu-child"><i class="fa fa-briefcase fa-2x fa-fw"></i>&nbsp; Portfolio</a>
+            <a href="#" class="btn btn-dark btn-lg text-left hover-efect menu-child"><i class="fa fa-phone fa-2x fa-fw"></i>&nbsp; Contacts</a>
         </div>
     </div>
     
